# neuraldigest-classification-etl

./: Dockerfile  Makefile  README.md  app.py  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ecr.yml
docker/: news-ml-classification-etl.Dockerfile
neuraldigest_ml_classification_etl/: etl.py
news_ml_classification_etl/: etl.py
news_ml_etl/: etl.py
